--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "http": "^0.0.1-security",
     "mongoose": "^6.7.0",
     "socket.io": "^4.5.3"
